waybar pulseaudio mute not showing bug

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -135,7 +135,7 @@ button {
 }
 
 #pulseaudio.muted {
-  color: @highlightHigh;
+  color: @iris;
 }
 
 #network,
